--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,6 +1,15 @@
-$pColor: #08d9d6;
-$sColor: #ff2e63;
-$darkColor: #252a34;
+$pColor: #e23e57;
+$sColor: #3ec1d3;
+$lightGray: #f4f5f7;
+$txtColor: #3a414f;
+// $txtColor: #252a34;
+// fonts
+$light: 300;
+$normal: 600;
+$bold: 700;
+// Shadows
+$shadow1: 1px 3px 7px rgba(0, 0, 0, 0.12);
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,7 +17,7 @@ $darkColor: #252a34;
   border: 0;
   outline: 0;
   max-width: 100%;
-  font-family: 'STCForward', sans-serif, arial;
+  font-family: 'Open Sans', sans-serif;
 }
 
 html {
@@ -17,7 +26,8 @@ html {
 
 body {
   background-color: #fff;
-  color: $darkColor;
+  color: $txtColor;
+  font-weight: $normal;
 }
 
 p {
@@ -35,7 +45,7 @@ input[type='tel'] {
 a {
   text-decoration: none;
   display: inline-block;
-  color: $darkColor;
+  color: $txtColor;
 }
 img {
   max-width: 100%;
@@ -43,10 +53,10 @@ img {
 
 // main-container
 .main-container {
-  max-width: 1600px;
+  max-width: 1700px;
   width: 100%;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 15px;
 }
 
 .flex {
@@ -100,4 +110,90 @@ img {
   //     background-color: #a8abae;
   //     cursor: not-allowed;
   //   }
+}
+
+main {
+  padding: 40px 15px !important;
+  color: #676767;
+  h1 {
+    font-size: 32px;
+    color: #58595c;
+    text-transform: uppercase;
+  }
+  .main-table {
+    width: 600px;
+    background-color: $lightGray;
+    padding: 20px;
+    box-shadow: $shadow1;
+    border-radius: 4px;
+    height: 100%;
+    table,
+    td,
+    th {
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th,
+    td {
+      padding: 15px;
+    }
+  }
+  .main-content {
+    flex: 1;
+    margin-right: 30px;
+    .outline-link {
+      display: flex;
+      align-items: center;
+      color: $pColor;
+      font-weight: 600;
+      img {
+        margin-left: 6px;
+      }
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+    section {
+      margin-bottom: 40px;
+      &.full-fund-name {
+        span {
+          margin-right: 32px;
+          font-weight: $normal;
+        }
+      }
+      &.returns-history {
+        table {
+          border-collapse: collapse;
+          font-size: 14px;
+          width: 100%;
+        }
+        th {
+          padding: 8px;
+          text-align: start;
+          color: #58595c;
+          border-bottom: 1px solid #ddd;
+        }
+        td {
+          padding: 4px 8px;
+        }
+      }
+      &.fund-charts {
+        canvas {
+          // flex: 1;
+          width: 300px;
+        }
+      }
+    }
+    .section-title {
+      font-size: 18px;
+      margin-bottom: 10px;
+      color: #000;
+    }
+  }
 }
