--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,12 +1,13 @@
 header {
   padding: 12px 0;
-  background-color: $darkColor;
+  background-color: $txtColor;
   .logo {
-    width: 130px;
-    height: 44px;
-    background-color: #ccc;
+    color: $lightGray;
+    color: $pColor;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2), 3px 4px 1px rgba(0, 0, 0, 0.4);
     border-radius: 3px;
-    margin-right: 20px;
+    margin-right: 40px;
     font-size: 30px;
     font-weight: 900;
     display: flex;
