--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,7 +168,7 @@ header .logo {
   color: #f4f5f7;
   color: #e23e57;
   letter-spacing: 2px;
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2), 3px 4px 1px rgba(0, 0, 0, 0.4);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.4);
   border-radius: 3px;
   margin-right: 40px;
   font-size: 30px;
@@ -189,6 +189,9 @@ header .login-btn {
   color: #3ec1d3;
   font-weight: 500;
   text-decoration: underline;
+}
+header .btn-primary {
+  text-transform: uppercase;
 }
 
 .multi-select {
