--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,7 +5,7 @@ header {
     color: $lightGray;
     color: $pColor;
     letter-spacing: 2px;
-    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2), 3px 4px 1px rgba(0, 0, 0, 0.4);
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.4);
     border-radius: 3px;
     margin-right: 40px;
     font-size: 30px;
@@ -26,5 +26,8 @@ header {
     color: $sColor;
     font-weight: 500;
     text-decoration: underline;
+  }
+  .btn-primary {
+    text-transform: uppercase;
   }
 }
