--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -2,17 +2,20 @@ header {
   padding: 12px 0;
   background-color: $txtColor;
   .logo {
-    color: $lightGray;
-    color: $pColor;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.4);
-    border-radius: 3px;
+    // color: $lightGray;
+    // color: $pColor;
+    // letter-spacing: 2px;
+    // text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2), 3px 3px 1px rgba(0, 0, 0, 0.4);
+    // border-radius: 3px;
+    // font-size: 30px;
+    // font-weight: 900;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     margin-right: 40px;
-    font-size: 30px;
-    font-weight: 900;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    img {
+      width: 50px;
+    }
   }
   li a {
     height: 44px;
