--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -53,7 +53,7 @@ img {
 
 // main-container
 .main-container {
-  max-width: 1700px;
+  max-width: 1300px;
   width: 100%;
   margin: auto;
   padding: 0 15px;
@@ -120,80 +120,56 @@ main {
     color: #58595c;
     text-transform: uppercase;
   }
-  .main-table {
-    width: 600px;
-    background-color: $lightGray;
-    padding: 20px;
-    box-shadow: $shadow1;
-    border-radius: 4px;
-    height: 100%;
-    table,
-    td,
-    th {
-      border: 1px solid #ddd;
-      text-align: left;
+  .outline-link {
+    display: flex;
+    align-items: center;
+    color: $pColor;
+    font-weight: 600;
+    img {
+      margin-left: 6px;
     }
-
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-
-    th,
-    td {
-      padding: 15px;
+    &:hover {
+      text-decoration: underline;
     }
   }
-  .main-content {
-    flex: 1;
-    margin-right: 30px;
-    .outline-link {
-      display: flex;
-      align-items: center;
-      color: $pColor;
-      font-weight: 600;
-      img {
-        margin-left: 6px;
-      }
-      &:hover {
-        text-decoration: underline;
+  section {
+    margin-bottom: 40px;
+    &.full-fund-name {
+      span {
+        margin-right: 32px;
+        font-weight: $normal;
       }
     }
-    section {
-      margin-bottom: 40px;
-      &.full-fund-name {
-        span {
-          margin-right: 32px;
-          font-weight: $normal;
-        }
+    &.returns-history {
+      table {
+        border-collapse: collapse;
+        font-size: 14px;
+        width: 100%;
       }
-      &.returns-history {
-        table {
-          border-collapse: collapse;
-          font-size: 14px;
-          width: 100%;
-        }
-        th {
-          padding: 8px;
-          text-align: start;
-          color: #58595c;
-          border-bottom: 1px solid #ddd;
-        }
-        td {
-          padding: 4px 8px;
-        }
+      th {
+        padding: 8px;
+        text-align: start;
+        color: #58595c;
+        border-bottom: 1px solid #ddd;
       }
-      &.fund-charts {
-        canvas {
-          // flex: 1;
-          width: 300px;
-        }
+      td {
+        padding: 4px 8px;
       }
     }
-    .section-title {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #000;
+    &.fund-charts {
+      canvas {
+        // flex: 1;
+        width: 300px;
+      }
     }
+  }
+  .section-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #000;
+  }
+  canvas {
+    // width: 300px !important;
+    // height: 200px !important;
   }
 }
