--- a/assets/scss/_multi-select.scss
+++ b/assets/scss/_multi-select.scss
@@ -42,8 +42,8 @@
     background-color: #fff;
     padding: 8px 0;
     border-radius: 4px;
-    animation: showOptions 0.1s ease-in forwards;
-    transform-origin: 80% 60%;
+    animation: showOptions 0.2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+    transform-origin: 90% 30%;
 
     // display: none;
     &.show {
